--- a/app/views/index.html
+++ b/app/views/index.html
@@ -76,14 +76,8 @@
       </p>
 
       <p class="govuk-body">
-       <a class="govuk-link--no-visited-state" href="./auto-cash-input/process.html">
-        Automatic cash input
-       </a>
-      </p>
-
-      <p class="govuk-body">
-       <a class="govuk-link--no-visited-state" href="./manual-cash-input/index.html">
-        Manual cash input
+       <a class="govuk-link--no-visited-state" href="./finance.html">
+        Finance
        </a>
       </p>
 
