--- a/app/views/manual-cash-input/till-details.html
+++ b/app/views/manual-cash-input/till-details.html
@@ -13,6 +13,9 @@
 
 {% block content %}
 
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
@@ -30,9 +33,8 @@
           }
         ]
       }) }}
-
-      
-
+    </div>
+  </div>    
 
       
 
@@ -40,15 +42,34 @@
 
           <h2 class="govuk-heading-m">Payments</h2>
 
-          
-
-          
-
-          <dl class="govuk-summary-list">
+          <!-- <dl class="govuk-summary-list">
             {% if data['payment1'] == "true" %}
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key govuk-!-font-weight-regular">
-                David THOMPSON
+                Criminal
+              </dt>
+              <dd class="govuk-summary-list__value">
+                David THOMPSON ({{ data['payment1AccountNumber'] or "06000427N" }})<br>{{ (data['payment1Amount'] | currency) + " – " + (data['payment1Method'])}}
+              </dd>
+              <dd class="govuk-summary-list__actions">
+                <ul class="govuk-summary-list__actions-list">
+                  <li class="govuk-summary-list__actions-list-item">
+                    <a class="govuk-link" href="./payment-1/check-payment.html">
+                      Change<span class="govuk-visually-hidden">payment</span>
+                    </a>
+                  </li>
+                  <li class="govuk-summary-list__actions-list-item">
+                    <a class="govuk-link" href="#">
+                      Remove<span class="govuk-visually-hidden">payment</span>
+                    </a>
+                  </li>
+                </ul>
+              </dd>
+            </div>
+            {% endif %}
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key govuk-!-font-weight-regular">
+                Court fee
               </dt>
               <dd class="govuk-summary-list__value">
                 {{ (data['payment1Amount'] | currency) + " – " + (data['payment1Method'])}}
@@ -68,18 +89,127 @@
                 </ul>
               </dd>
             </div>
-            {% endif %}
-          </dl>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key govuk-!-font-weight-regular">
+                Suspense
+              </dt>
+              <dd class="govuk-summary-list__value">
+                {{ (data['payment1Amount'] | currency) + " – Cheque" }}
+              </dd>
+              <dd class="govuk-summary-list__actions">
+                <ul class="govuk-summary-list__actions-list">
+                  <li class="govuk-summary-list__actions-list-item">
+                    <a class="govuk-link" href="./payment-1/check-payment.html">
+                      Change<span class="govuk-visually-hidden">payment</span>
+                    </a>
+                  </li>
+                  <li class="govuk-summary-list__actions-list-item">
+                    <a class="govuk-link" href="#">
+                      Remove<span class="govuk-visually-hidden">payment</span>
+                    </a>
+                  </li>
+                </ul>
+              </dd>
+            </div>
+          </dl> -->
 
           
+          <!-- TABLE -->
+           <div class="moj-scrollable-pane">
 
+          <table class="govuk-table">
+            <thead class="govuk-table__head">
+              <tr class="govuk-table__row">
+                <th scope="col" class="govuk-table__header">Category</th>
+                <th scope="col" class="govuk-table__header">Defendant</th>
+                <th scope="col" class="govuk-table__header">Amount</th>
+                <th scope="col" class="govuk-table__header">Payee</th>
+                <th scope="col" class="govuk-table__header">Method</th>
+                <th scope="col" class="govuk-table__header govuk-!-text-align-right" >Actions</th>
+                
+              </tr>
+            </thead>
+            <tbody class="govuk-table__body">
+              <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header govuk-!-font-weight-regular">Criminal</th>
+                <td class="govuk-table__cell">David THOMPSON ({{ data['payment1AccountNumber'] or "06000427N" }})</td>
+                <td class="govuk-table__cell">£50.00</td>
+                <td class="govuk-table__cell">Defendant</td>
+                <td class="govuk-table__cell">Cheque</td>
+                <td class="govuk-table__cell">
+                  <ul class="govuk-summary-list__actions-list govuk-!-text-align-right">
+                        <li class="govuk-summary-list__actions-list-item">
+                          <a class="govuk-link govuk-link--no-visited-state" href="./payment-1/check-payment.html">
+                            Change<span class="govuk-visually-hidden">payment</span>
+                          </a>
+                        </li>
+                        <li class="govuk-summary-list__actions-list-item">
+                          <a class="govuk-link govuk-link--no-visited-state" href="#">
+                            Remove<span class="govuk-visually-hidden">payment</span>
+                          </a>
+                        </li>
+                  </ul>
+                </td>
+              </tr>
+              <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header govuk-!-font-weight-regular">Court fee</th>
+                <td class="govuk-table__cell">–</td>
+                <td class="govuk-table__cell">£50.00</td>
+                <td class="govuk-table__cell">Defendant</td>
+                <td class="govuk-table__cell">Cheque</td>
+                <td class="govuk-table__cell">
+                  <ul class="govuk-summary-list__actions-list govuk-!-text-align-right">
+                        <li class="govuk-summary-list__actions-list-item">
+                          <a class="govuk-link govuk-link--no-visited-state" href="./payment-1/check-payment.html">
+                            Change<span class="govuk-visually-hidden">payment</span>
+                          </a>
+                        </li>
+                        <li class="govuk-summary-list__actions-list-item">
+                          <a class="govuk-link govuk-link--no-visited-state" href="#">
+                            Remove<span class="govuk-visually-hidden">payment</span>
+                          </a>
+                        </li>
+                  </ul>
+                </td>
+              </tr>
+              <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header govuk-!-font-weight-regular  ">Suspense</th>
+                <td class="govuk-table__cell">–</td>
+                <td class="govuk-table__cell">£50.00</td>
+                <td class="govuk-table__cell">3rd party</td>
+                <td class="govuk-table__cell">Cheque</td>
+                <td class="govuk-table__cell">
+                  <ul class="govuk-summary-list__actions-list govuk-!-text-align-right">
+                        <li class="govuk-summary-list__actions-list-item">
+                          <a class="govuk-link govuk-link--no-visited-state" href="./payment-1/check-payment.html">
+                            Change<span class="govuk-visually-hidden">payment</span>
+                          </a>
+                        </li>
+                        <li class="govuk-summary-list__actions-list-item">
+                          <a class="govuk-link govuk-link--no-visited-state" href="#">
+                            Remove<span class="govuk-visually-hidden">payment</span>
+                          </a>
+                        </li>
+                  </ul>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          </div>
+          
+
+          <!-- ADD PAYMENT LOGIC -->
           {{ govukButton({
               text: "Add payment",
               classes: "govuk-button--secondary",
               href: "./payment-2/payment-category.html"
           }) }}
 
+          <!-- SUMMARY -->
+           <div class="govuk-grid-row">
+            <div class="govuk-grid-column-two-thirds">
           <h2 class="govuk-heading-m">Summary</h2>
+
           {{ govukSummaryList({
             rows: [
               {
@@ -95,7 +225,7 @@
                   text: "Total"
                 },
                 value: {
-                  text: (data['payment1Amount'] | currency)
+                  text: ((+data['payment1Amount'] + +data['payment1Amount']) | currency)
                 }
               }
             ]
@@ -107,6 +237,9 @@
               text: "Create till",
               href: "./index.html"
           }) }}
+
+          </div>
+          </div>
 
           
 
@@ -127,6 +260,9 @@
           <p class="govuk-body">You must add at least 1 payment to the till.</p>
 
       {% endif %}
+
+        </div>
+    </div>  
 
 
       
