--- a/app/views/daily-checks/print-cheques.html
+++ b/app/views/daily-checks/print-cheques.html
@@ -16,9 +16,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-            <h1 class="govuk-heading-l">{{pageName}}</h1>
+        <form class="govuk-form-group" action="select-printer" method="post">
 
-            <!-- <h2 class="govuk-heading-m">To print</h2> -->
+            <h1 class="govuk-heading-l">{{pageName}}</h1>
 
             {{ govukSummaryList({
                 rows: [
@@ -73,12 +73,12 @@
 
             
 
-            <!-- <div id="confirmNextCheque" class="govuk-!-margin-bottom-6 govuk-!-margin-top-6">
+            <div id="confirmNextCheque" class="govuk-!-margin-bottom-6 govuk-!-margin-top-6">
                 <div style="padding: 18px 15px 15px 15px; border-left: 5px solid #1D70B8; background-color: #f3f2f1;">
-                    <p id="confirmNextCheque_Heading" class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0" >10 cheques have been printed since</p>
-                    <p id="confirmNextCheque_Body" class="govuk-body govuk-!-margin-bottom-0 govuk-!-margin-top-1">Body</p>
+                    <!-- <p id="confirmNextCheque_Heading" class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0" >10 cheques have been printed since</p> -->
+                    <p id="confirmNextCheque_Body" class="govuk-body govuk-!-margin-bottom-0">All cheque numbers are in sequence</p>
                 </div>
-            </div> -->
+            </div>
 
             <!-- {{ govukCheckboxes({
                 name: "confirmChequeLoadedPrinter",
@@ -100,11 +100,13 @@
 
             <div class="govuk-button-group">
                 <button type="submit" class="govuk-button">
-                    Confirm and print
+                    Continue
                 </button>
 
                 <p class="govuk-body"><a href="./task-list.html" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
             </div>
+
+        </form>
 
            
 
